tests/build/impl_ui_node/delegate_iter_items_not_ui_node_children.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
   --> $DIR/delegate_iter_items_not_ui_node_children.rs:9:16
    |
9   | #[impl_ui_node(children_iter)]
    |                ^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`
    |
note: required by a bound in `delegate_iter_mut`
   --> $DIR/ui_node.rs:532:75
    |
532 |     pub fn delegate_iter_mut<'a>(d: impl IntoIterator<Item = &'a mut impl UiNode>) -> impl IterMutImpl {
    |                                                                           ^^^^^^ required by this bound in `delegate_iter_mut`

error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
   --> $DIR/delegate_iter_items_not_ui_node_children.rs:9:16
    |
9   | #[impl_ui_node(children_iter)]
    |                ^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`
    |
note: required by a bound in `delegate_iter`
   --> $DIR/ui_node.rs:528:67
    |
528 |     pub fn delegate_iter<'a>(d: impl IntoIterator<Item = &'a impl UiNode>) -> impl IterImpl {
    |                                                                   ^^^^^^ required by this bound in `delegate_iter`
